<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/public_height_40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/public_mar_left_10dp"
            android:layout_weight="2"
            android:background="@color/transparent"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:hint="@string/module_waybill_name_search_accounts"
            android:imeOptions="actionSearch"
            android:maxLength="20"
            android:singleLine="true"
            android:textColor="#ffcccccc"
            android:textSize="@dimen/public_font_13sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tv_start_time"
            android:layout_width="@dimen/public_width_80dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/public_mar_left_5dp"
            android:gravity="center"
            android:hint="@string/module_waybill_name_start_time"
            android:textColor="#ffcccccc"
            android:textSize="@dimen/public_font_13sp" />

        <TextView
            android:id="@+id/tv_end_time"
            android:layout_width="@dimen/public_width_80dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/public_mar_left_5dp"
            android:gravity="center"
            android:hint="@string/module_waybill_name_end_time"
            android:textColor="#ffcccccc"
            android:textSize="@dimen/public_font_13sp" />

        <ImageView
            android:id="@+id/img_search"
            android:layout_width="@dimen/public_width_40dp"
            android:layout_height="@dimen/public_height_40dp"
            android:layout_marginRight="@dimen/public_mar_right_5dp"
            android:scaleType="center"
            android:src="@mipmap/ic_search_black" />
    </LinearLayout>

    <com.zhouyou.recyclerview.XRecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/public_color_F0F0F0"
        android:overScrollMode="never"
        android:padding="@dimen/public_mar_left_5dp" />

    <LinearLayout
        android:id="@+id/ll_create_accounts"
        android:layout_width="match_parent"
        android:layout_height="@dimen/public_height_60dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_all"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/public_height_40dp"
            android:layout_marginLeft="@dimen/public_mar_left_15dp"
            android:button="@drawable/selected_cb_orange_style"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:text="全选" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/public_mar_left_30dp"
            android:text="共  ¥"
            android:textColor="#ff3d3d3d"
            android:textSize="@dimen/public_font_16sp" />

        <TextView
            android:id="@+id/tv_create_accounts_total_money"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/public_mar_left_5dp"
            android:layout_marginRight="@dimen/public_mar_right_30dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="0.00"
            android:textColor="#FF3333"
            android:textSize="@dimen/public_font_16sp" />

        <TextView
            android:id="@+id/tv_create_accounts"
            android:layout_width="@dimen/public_width_100dp"
            android:layout_height="@dimen/public_height_40dp"
            android:layout_marginRight="@dimen/public_mar_right_15dp"
            android:background="@drawable/shape_radius20_orge"
            android:gravity="center"
            android:text="生成"
            android:textColor="#ffffff"
            android:textSize="@dimen/public_font_18sp" />

    </LinearLayout>

</LinearLayout>