<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/public_color_F0F0F0"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/public_mar_left_7dp"
        android:background="@drawable/shape_radius15_gray"
        android:orientation="vertical">

        <!--订单信息-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/public_height_67dp">

            <ImageView
                android:id="@+id/img_head"
                android:layout_width="@dimen/public_width_40dp"
                android:layout_height="@dimen/public_height_40dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/public_mar_left_15dp"
                android:layout_marginRight="@dimen/public_mar_right_10dp"
                android:src="@mipmap/ic_head_default" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/img_head"
                android:layout_toLeftOf="@id/tv_car_number"
                android:layout_toRightOf="@id/img_head"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@color/public_color_333333"
                android:textSize="@dimen/public_font_14sp"
                tools:text="水暖卫浴洁具" />

            <LinearLayout
                android:id="@+id/ll_order_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/img_head"
                android:layout_toLeftOf="@id/tv_car_number"
                android:layout_toRightOf="@id/img_head"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/waybill_name_order_number"
                    android:textColor="@color/public_color_999999"
                    android:textSize="@dimen/public_font_14sp" />

                <TextView
                    android:id="@+id/tv_order_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="20190819000001"
                    android:textColor="@color/public_color_999999"
                    android:textSize="@dimen/public_font_14sp" />
            </LinearLayout>


            <TextView
                android:id="@+id/tv_car_number"
                android:layout_width="@dimen/public_width_80dp"
                android:layout_height="@dimen/public_height_30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/public_mar_left_15dp"
                android:background="@drawable/shape_radius4_center_gray"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/waybill_name_car_number"
                android:textColor="@color/public_color_333333"
                android:textSize="@dimen/public_font_14sp"
                tools:text="粤A12345" />

        </RelativeLayout>

        <include layout="@layout/layout_wabill_detail_line" />

        <!--发货时间-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/public_height_50dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="@dimen/public_pad_left_37dp"
            android:paddingRight="@dimen/public_pad_right_37dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/waybill_name_send_time"
                    android:textColor="@color/public_color_333333"
                    android:textSize="@dimen/public_font_14sp" />

                <TextView
                    android:id="@+id/tv_send_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textColor="@color/public_color_333333"
                    android:textSize="@dimen/public_font_14sp"
                    tools:text="08月20日" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/waybill_name_carrier"
                    android:textColor="@color/public_color_999999"
                    android:textSize="@dimen/public_font_14sp" />

                <TextView
                    android:id="@+id/tv_carrier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textColor="@color/public_color_999999"
                    android:textSize="@dimen/public_font_14sp"
                    tools:text="佛山顺富物流有限公司" />
            </LinearLayout>

        </LinearLayout>

        <!--到货信息-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/public_height_128dp"
            android:layout_margin="@dimen/public_mar_left_10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/public_pad_left_5dp"
                    android:paddingRight="@dimen/public_pad_right_10dp">

                    <View
                        android:layout_width="@dimen/public_width_1dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="#D9D9D9"
                        android:visibility="invisible"
                        tools:visibility="visible" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/shape_radius12_orange" />

                    <View
                        android:layout_width="@dimen/public_width_1dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="#D9D9D9" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_send_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:textColor="@color/public_color_333333"
                        android:textSize="@dimen/public_font_22sp"
                        tools:text="发货地址" />

                    <TextView
                        android:id="@+id/tv_send_company"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/public_mar_top_5dp"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:textColor="#ff999999"
                        android:textSize="14sp"
                        tools:text="发货公司" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/public_pad_left_5dp"
                    android:paddingRight="@dimen/public_pad_right_10dp">

                    <View
                        android:layout_width="@dimen/public_width_1dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="#D9D9D9" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/shape_radius12_black" />

                    <View
                        android:layout_width="@dimen/public_width_1dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="#D9D9D9"
                        android:visibility="invisible"
                        tools:visibility="visible" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_receive_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:textColor="@color/public_color_333333"
                        android:textSize="@dimen/public_font_22sp"
                        tools:text="收货地址" />

                    <TextView
                        android:id="@+id/tv_receive_company"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/public_mar_top_5dp"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:textColor="#ff999999"
                        android:textSize="14sp"
                        tools:text="收货公司" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_order_state_fahuo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/public_mar_left_10dp"
            android:layout_marginRight="@dimen/public_mar_right_10dp"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/tv_fahuo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/public_height_44dp"
                android:layout_margin="@dimen/public_mar_left_10dp"
                android:background="@drawable/bg_radius23_jianbian"
                android:gravity="center"
                android:text="@string/waybill_name_fahuo"
                android:textColor="@color/white"
                android:textSize="@dimen/public_font_16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_order_state_shouhuo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/public_mar_left_10dp"
            android:layout_marginRight="@dimen/public_mar_right_10dp"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/tv_daka"
                android:layout_width="0dp"
                android:layout_height="@dimen/public_height_44dp"
                android:layout_margin="@dimen/public_mar_left_10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_radius23_line_orange_content_white"
                android:gravity="center"
                android:text="@string/waybill_name_yunshu_daka"
                android:textColor="@color/public_color_orange_light"
                android:textSize="@dimen/public_font_16sp" />

            <TextView
                android:id="@+id/tv_shouhuo"
                android:layout_width="0dp"
                android:layout_height="@dimen/public_height_44dp"
                android:layout_margin="@dimen/public_mar_left_10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_radius23_jianbian"
                android:gravity="center"
                android:text="@string/waybill_name_shouhuo"
                android:textColor="@color/white"
                android:textSize="@dimen/public_font_16sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>